Initial JUnit test suite and CI setup
Moved vendored jars to pull from Maven Central